--- a/index.html
+++ b/index.html
@@ -1,28 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <h1>Hello world</h1>
-    <nav>
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-      <a href="#">Link 4</a>
-    </nav>
-  </header>
-  <main>
-    <article>
-      <h2>Hello</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, quis repudiandae? At totam laudantium, cupiditate sed ipsa nemo tempore explicabo hic quae debitis illo nobis, suscipit possimus. Nesciunt, tempora assumenda?</p>
-      <p>Minus, doloribus harum suscipit tempore officia eligendi pariatur maiores? Ratione laudantium asperiores corrupti fugit voluptate quis esse aspernatur, nulla quidem dolorum vero illo obcaecati voluptates enim eveniet eos cumque aut.</p>
-      <p>Obcaecati sit at error tenetur aliquam quidem architecto odit nisi. Facilis soluta quia, vel consequuntur reprehenderit debitis modi magnam nam voluptatibus officiis fugiat atque corrupti dolorum perferendis deleniti eum blanditiis!</p>
-    </article>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Hello world</h1>
+      <nav>
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+        <a href="#">Link 4</a>
+      </nav>
+    </header>
+    <main>
+      <article>
+        <h2>Hello</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+          quis repudiandae? At totam laudantium, cupiditate sed ipsa nemo
+          tempore explicabo hic quae debitis illo nobis, suscipit possimus.
+          Nesciunt, tempora assumenda?
+        </p>
+        <p>
+          Minus, doloribus harum suscipit tempore officia eligendi pariatur
+          maiores? Ratione laudantium asperiores corrupti fugit voluptate quis
+          esse aspernatur, nulla quidem dolorum vero illo obcaecati voluptates
+          enim eveniet eos cumque aut.
+        </p>
+        <p>
+          Obcaecati sit at error tenetur aliquam quidem architecto odit nisi.
+          Facilis soluta quia, vel consequuntur reprehenderit debitis modi
+          magnam nam voluptatibus officiis fugiat atque corrupti dolorum
+          perferendis deleniti eum blanditiis!
+        </p>
+        <div class="box">
+          <h3>Box</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+            dolores velit quisquam unde sint hic totam saepe quod quasi
+            eligendi!
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit,
+            ratione.
+          </p>
+        </div>
+        <div class="box">
+          <h3>Box</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+            dolores velit quisquam unde sint hic totam saepe quod quasi
+            eligendi!
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit,
+            ratione.
+          </p>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
