--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit,
             ratione.
           </p>
+          <ul class="badge">
+            <li>Lorem ipsum</li>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem</li>
+            <li>Lorem</li>
+            <li>Lorem, ipsum.</li>
+            <li>Lorem</li>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem</li>
+          </ul>
         </div>
         <div class="box">
           <h3>Box</h3>
@@ -60,7 +70,17 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit,
             ratione.
           </p>
-        </div>
+        <ul class="badge">
+          <li>Lorem ipsum</li>
+          <li>Lorem, ipsum dolor.</li>
+          <li>Lorem</li>
+          <li>Lorem</li>
+          <li>Lorem, ipsum.</li>
+          <li>Lorem</li>
+          <li>Lorem, ipsum dolor.</li>
+          <li>Lorem</li>
+        </ul>
+      </div>
       </article>
     </main>
   </body>
